# doublevision

./: .gitignore  CMakeLists.txt  README.md  camera.cpp
sandbox/: CMakeLists.txt  main.cpp  sandbox
src/: .main.cpp.swp  CMakeLists.txt  camera.cpp  main.cpp
src/Release/: camera  dvision
src/asio118/: CMakeLists.txt
src/gpiolib/: .gpiod.hpp.swp  CMakeLists.txt  chip.cpp  iter.cpp  line.cpp  line_bulk.cpp
src/visionlib/: .image.cpp.swp  .visionlib.hpp.swp  CMakeLists.txt  camera.cpp  image.cpp  visionlib.hpp
